testing/errors/expectedtwohexdigits2.a
	*=$1000
	!tx "ab\x9" 	; -> "Expected two hex digits after \x sequence."
